Category logic removed. Endpoints updated
